--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
   <header>
     <h1 id="topo">Cristal Dáfinny</h1>
-    <p>Vejam vocês, o céu é o limite.
+    <p>Vejam, para vocês, o céu é o limite.
     Para nós, o céu é apenas aquilo em que nos apoiamos para 
     alcançar o além (corra, corra, corra)</p>
   </header>
   <main>
     <section>
-      <img src="img/feat1.jpg" alt="Primeiro">
-      <h2>__$ Destaque 1 $__</h2>
-      <p>__$ Texto com um link para o destaque $__ <a href="#" target="_blank"> __$ texto do link $__</a>.  </p>
+      <img src="img/ari.jpg" alt="Primeiro">
+      <h2>Ariana Grande</h2>
+      <p>link para o destaque  <a href="https://open.spotify.com/intl-pt/artist/66CXWjxzNUsdJxJ2JdwvnR" target="_blank">Saiba Mais !</a></p>
     </section>
     <section>
-      <img src="img/feat2.jpg" alt="Segundo">
-      <h2>__$ Destaque 2 $__</h2>
-      <p>__$ Texto com um link para o destaque $__ <a href="#" target="_blank"> __$ texto do link $__</a>.</p>
+      <img src="img/jujutsu.jpg" alt="Segundo">
+      <h2>Jujutsu Kaisen</h2>
+      <p>link para o destaque  <a href="https://www.crunchyroll.com/pt-br/series/GRDV0019R/jujutsu-kaisen?srsltid=AfmBOooLab4KR8BSyYV6dZV-ICEiktUfllJMoF_W3PNCWrG1NDFPpOM8" target="_blank">Saiba Mais !</a></p>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 __$ Seu nome $__</p>
+    <p>&copy; 2025 Cristal Dáfinny</p>
   </footer>
 </body>
 
